--- a/Style.css
+++ b/Style.css
@@ -37,3 +37,64 @@ nav ul{
 nav ul li{
     padding: 0px 10px 0px 10px;
 }
+
+.container{
+    display: flex;
+    margin:23px auto;
+    width: 70%;
+    border-radius: 12px;
+    padding: 34px;
+    min-height: 65.1vh;
+    background-color: rgb(12, 10, 10);
+    color: white;
+    font-family: 'Velera-Round',sans-serif;
+    position:relative;
+    overflow: hidden;
+   
+
+}
+
+.container::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;    
+    height: 100%;
+    border-radius: 12px;
+    background-size: cover;
+    background-image: url(Tank.jpg);
+    filter: blur(1px);
+    z-index: 1; 
+}
+.container > * {
+    position: relative;
+    z-index: 2; /* Ensure the text is above the pseudo-element */
+}
+
+
+
+.bottom{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position:sticky;
+    height: 100px;
+    color: aliceblue;
+    background-color: black;
+   
+}
+
+#myprogressbar{
+    width: 98.2vw;
+}
+.icons {
+  margin-top: 30px;
+   
+}
+.icons i{
+    cursor: pointer;
+    
+}
+
